--- a/railway.yml
+++ b/railway.yml
@@ -4,5 +4,5 @@ commands:
   - pip install -r requirements.txt
   - python manage.py migrate
   - python manage.py collectstatic --noinput
-start: gunicorn your_project.wsgi:application --bind 0.0.0.0:$PORT --log-level debug --timeout 180
+start: gunicorn respir.wsgi:application --bind 0.0.0.0:5000 --log-level debug --timeout 180
 
