--- a/railway.yml
+++ b/railway.yml
@@ -1,8 +1,7 @@
 name: respir
-env: python-3.8
+env: python3.7
 commands:
   - pip install -r requirements.txt
-  - python manage.py migrate
-  - python manage.py collectstatic --noinput
-start: gunicorn respir.wsgi:application --bind 0.0.0.0:$PORT --log-level debug --timeout 180
+start: python app.py
+
 
