--- a/railway.yml
+++ b/railway.yml
@@ -2,6 +2,6 @@ name: respir
 env: python3.7
 commands:
   - pip install -r requirements.txt
-  - python app.py
+start: . /opt/venv/bin/activate && gunicorn -w 4 -b 0.0.0.0:5000 app:app
 
 
