--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-librosa==0.10.0.post2
-pandas==1.3.5
+librosa
 protobuf==3.20.*
-numpy==1.21.5
-tensorflow==2.2.1
+numpy
+tensorflow
 flask
 gunicorn
 
