--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ joblib==1.2.0
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
 lazy_loader==0.2
-librosa==0.10.0.post2
+librosa==0.8.0
 llvmlite==0.39.1
 Markdown==3.4.3
 MarkupSafe==2.1.2
@@ -52,7 +52,7 @@ scikit-learn==1.0.2
 scipy==1.7.3
 six==1.16.0
 soundfile==0.12.1
-soxr==0.3.5
+soxr
 tensorboard==2.0.2
 tensorflow==2.0.0
 tensorflow-estimator==2.0.1
